--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -1,9 +1,3 @@
-        <footer>
-                <p><small>Hosted on GitHub Pages &mdash; &copy; Shane Starcher 2015</a></small></p>
-        </footer>
-        <script src='/assets/lib/jquery.js'></script>
-        <script src='/assets/lib/bootstrap.min.js'></script>
-        <script src='/assets/js/init.js'></script>
-        <script src="/assets/js/scale.fix.js"></script>
-  </body>
-</html>
+<footer>
+    <small>&copy; {{ site.time | date: '%Y' }}. {{ site.copyright }}</small>
+</footer>
