--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shane Starcher - {{ page.title }}</title>
+    <title>{{ site.name }} - {{ page.title }}</title>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <link href="/assets/css/styles.css" rel="stylesheet" >
-    <link href="/assets/css/pygment_trac.css" rel="stylesheet">
-
-    <link href="/assets/lib/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/assets/css/style.css" rel="stylesheet" media="screen">
-    <link href="/assets/css/syntax.css" rel="stylesheet" media="screen">    
+    
+    {% stylesheet styles %}
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Shane</h1>
-        <p></p>
-        <p class="view"><a href="https://github.com/sstarcher">View My GitHub Profile</a></p>
+    <header>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">{{ site.name }}</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            {% for section in site.pages %}
+              <li><a href="{{ section.dir }}">{{section.title}} <span class="sr-only">????</span></a></li>
+            {% endfor %}
+            <li><a href="https://github.com/sstarcher">GitHub</a></li>
+          </ul>
+        </div>
+        </div>
+      </nav>
       </header>
