--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,13 @@
 {% include layout/header.html %}
-        <div class='container container--content'>
-                <div class='row'>
-                        <div class='col-md-12'>
-                                {{ content }}
-                        </div>
-                </div>
-        </div>
-{% include layout/footer.html %}
+	<div class="container">
+	  <div class="content">
+		{{ content }}
+	   </div>
+	</div>
+        
+	{% include layout/footer.html %}
+	{% javascript application %}
+    {% javascript init %}
+    {% javascript scale.fix %}
+  </body>
+</html>
