--- a/_assets/stylesheets/styles.css.scss
+++ b/_assets/stylesheets/styles.css.scss
@@ -15,6 +15,11 @@ img.icon {
   padding: 40px 15px;
 }
 
+.cloud-section {
+  padding: 10px 0px;
+}
+
+
 body {
   padding:50px;
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
