--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -17,7 +17,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="resume">Resume</a></li>
+            <li><a href="/resume">Resume</a></li>
             <li>
               <a class="icon" href="https://github.com/sstarcher">
                 <img class="icon" src="{{ site.url }}{{ site.baseurl }}/assets/github.png">
