add images and refactor page

--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -1,124 +1,94 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	{%- include head.html -%}
-    <link rel="stylesheet" href="{{ "/css/recipes.css" | relative_url }}">
-</head>
-<body>
-	<header class="texture-{{ site.texture.style }}">
-		<div class="container">
-			{%- include nav.html -%}
+---
+layout: page
+---
+		<link rel="stylesheet" media="screen" href="{{ site.baseurl }}/css/screen.css">
+		{% if page.print_stylesheet %}
+			<link rel="stylesheet" media="print" href="{{ site.baseurl }}/css/print.css">
+		{% endif %}
+
+<article class="post">
+	<div class="image">
+		<img class="photo" src="{{ page.image_url }}" alt="{{ page.title }}">
+		<a href="https://www.yummly.com" class="YUMMLY-YUM-BUTTON">Yum</a>
+	</div>
+
+	<ul id="recipe" class="recipe-overview">
+		{% if page.servings != "" %}
+		<li title="Servings">{% include recipe-icon.html icon="quantity" %}<span>{{ page.servings }}</span></li>
+		{% endif %}
+		{% if page.prep_time != "" %}
+		<li title="Prep Time">{% include recipe-icon.html icon="time" %}<span>{{ page.prep_time }}</span></li>
+		{% endif %}
+		{% if page.cook_time != "" %}
+		<li title="Cook Time">{% include recipe-icon.html icon="cook" %}<span>{{ page.cook_time }}</span></li>
+		{% endif %}
+		<li>Rating: <b class="rating">{% for i in (1..page.rating) %}★{% endfor %}</b></li>
+	</ul>
+
+	<div class="recipe-contents">
+		<div class="ingredients">
+			<h2>Ingredients</h2>
+            <ul>
+            {% for item in page.ingredients %}
+            <li>{{ item }}</li>
+            {% endfor %}
+            </ul>
 		</div>
-		{%- include page_header.html -%}
-	</header>
-	<main>
-		<div class="container">
-            <!-- Recipe -->
-            <div class="recipe" itemscope itemtype="http://schema.org/Recipe">
-                <div class="infobox">
-                    <!-- Image -->
-                    <div class="photobox">
 
-                        <a href="{{ page.image_url }}">
-                            <img src="{{ page.image_url }}" itemprop="image" class="photo"/>
-                        </a>
-                        <!-- Images not hosted at a different source need downloaded -->
-                    </div>
-
-
-                    <!-- Name -->
-                    <h1 itemprop="name" class="name">{{ page.title }}</h1>
-
-                    <!-- Rating, categories -->
-                    <p itemprop="aggregateRating" class="rating" value="{{ page.rating }}">
-                    {% for i in (1..page.rating) %}★{% endfor %}
-                    </p>
-                    <p itemprop="recipeCategory" class="categories">{{ page.categories}}</p>
-                    <p class="metadata">
-                        <!-- Cook time, prep time, servings, difficulty -->
-                        <b>Prep Time: </b><span itemprop="prepTime">{{ page.prep_time }}</span>
-                        <b>Cook Time: </b><span itemprop="cookTime">{{ page.cook_time }}</span>
-                        <b>Total Time: </b><span itemprop="totalTime">{{ page.total_time }}</span>
-                        <b>Difficulty: </b><span itemprop="difficulty">{{ page.difficulty }}</span>
-                        <b>Servings: </b><span itemprop="recipeYield">{{ page.servings }}</span>
-
-                        <!-- Source -->
-                        <a itemprop="url" href="{{ page.source_url }}">
-                            <span itemprop="author">Original Recipe</span>
-                        </a>
-                        <a href="https://www.yummly.com" class="YUMMLY-YUM-BUTTON">Yum</a>
-                        <script src="https://www.yummly.com/js/widget.js?general"></script>
-                    </p>
-                    <div class="clear"></div>
-                </div>
-
-                <div class="columnbox">
-                    <!-- Ingredients -->
-                    <div class="ingredientsbox">
-                        <h3 class="subhead">Ingredients</h3>
-                        <div class="ingredients text">
-                            {% assign list = page.ingredients | newline_to_br | split: '<br />' %}
-                            {% for item in list %}
-                            <p class="line" itemprop="recipeIngredient">{{ item }}</p>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <!-- Nutrition (in two-column mode it goes below the ingredients) -->
-                </div>
-
-                <!-- Description -->
-                <div class="descriptionbox">
-                    {%- if page.description != "" -%}
-                    <h3 class="subhead">Description</h3>
-                    <div itemprop="description" class="description text">
-                        {% assign list = page.description | newline_to_br | split: '<br />' %}
-                        {% for item in list %}
-                        <p>{{ item }}</p>
-                        {% endfor %}
-                    </div>
-                    {%- endif -%}
-                </div>
-
-                <!-- Directions -->
-                <div class="directionsbox">
-                    <h3 class="subhead">Directions</h3>
-                    <div itemprop="recipeInstructions" class="directions text">
-                        {% assign list = page.directions | newline_to_br | split: '<br />' %}
-                        {% for item in list %}
-                        <p class="line">{{ item }}</p>
-                        <p>&nbsp;</p>
-                        {% endfor %}
-                    </div>
-                </div>
-
-                <!-- Notes -->
-                <div class="notesbox">
-                    {%- if page.notes != "" -%}
-                    <h3 class="subhead">Notes</h3>
-                    <div itemprop="comment" class="notes text">
-                        {% assign list = page.notes | newline_to_br | split: '<br />' %}
-                        {% for item in list %}
-                        <p>{{ item }}</p>
-                        {% endfor %}
-                    </div>
-                    {%- endif -%}
-                </div>
-
-                <!-- Nutrition (in regular mode it goes below the notes) -->
-                <div class="nutritionbox textbox">
-                    {%- if page.nutritional_info != "" -%}
-                    <h3 class="subhead">Nutrition</h3>
-                    <div itemprop="nutrition" class="nutrition text">
-                        {% assign list = page.nutritional_info | newline_to_br | split: '<br />' %}
-                        {% for item in list %}
-                        <p>{{ item }}</p>
-                        {% endfor %}
-                    </div>
-                    {%- endif -%}
-                </div>
-            </div>
+		<div class="directions">
+			<h2>Directions</h2>
+            <ol>
+            {% for item in page.directions %}
+            <li>{{ item }}</li>
+            {% endfor %}
+            </ol>
 		</div>
-	</main>
-	{%- include footer.html -%}
-</body>
-</html>
+	</div>
+
+	<div class="sharing">
+		{% assign share_url = page.url | absolute_url | cgi_escape %}
+		<a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ share_url }}">{% include social-icon.html icon="Facebook" %}</a>
+		<a class="twitter" href="https://twitter.com/intent/tweet?url={{ share_url }}&amp;text=I'm%20going%20to%20this%20event!">{% include social-icon.html icon="Twitter" %}</a>
+		<a class="instagram" href="https://instagram.com">{% include social-icon.html icon="Instagram" %}</a>
+		<a class="pinterest" href="//pinterest.com/pin/create/link/?url={{ share_url }}&amp;description={{ page.description }}">{% include social-icon.html icon="Pinterest" %}</a>
+		<a class="email" href="mailto:?subject=I've%20found%20a%20great%20recipe&amp;body=Check%20it%20out%20-%20{{ share_url }}">{% include social-icon.html icon="Email" %}</a>
+	</div>
+
+	<div class="cta">
+		<h2>More delicious recipes</h2>
+		<div class="button"><a href="{{ site.baseurl }}/recipes">Check out more recipes</a></div>
+	</div>
+	{% if site.disqus_shortname and page.comments %}
+		<div id="disqus_thread"></div>
+		<script>
+			var disqus_shortname = '{{ site.disqus_shortname }}';
+			var disqus_config = function () {
+				this.page.url = "{{ page.url | prepend: site.url }}";
+				this.page.identifier = "{{ page.id }}";
+			};
+			(function() {  // DON'T EDIT BELOW THIS LINE
+				var d = document, s = d.createElement('script');
+				s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+				s.setAttribute('data-timestamp', +new Date());
+				(d.head || d.body).appendChild(s);
+			})();
+		</script>
+		<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+	{% endif %}
+</article>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/js/jquery.imgPin.min.js"></script>
+<script src="https://www.yummly.com/js/widget.js?general"></script>
+<script>
+	$(function() {
+		$('.post img').imgPin();
+		$('a[href*=\\#]').on('click', function(event){
+			var el = $(this.hash);
+			if (el.length > 0) {
+				event.preventDefault();
+				$('html,body').animate({scrollTop:$(this.hash).offset().top - 50}, 500);
+			}
+		});
+	});
+</script>
