--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -1,13 +1,19 @@
 ---
 layout: page
 ---
-<div class="row">
-    <div class="column-small">&nbsp;</div>
-    <div class="column">
-        <ul>
-        {% for section in site.data.recipes %}
-            <li><a href="/recipes/{{ section.name | downcase | replace: " ", "-" }}.html">{{ section.name  }}</a></li>
+		<link rel="stylesheet" media="screen" href="{{ site.baseurl }}/css/screen.css">
+		{% if page.print_stylesheet %}
+			<link rel="stylesheet" media="print" href="{{ site.baseurl }}/css/print.css">
+		{% endif %}
+		<link rel="stylesheet" media="screen" href="{{ site.baseurl }}/css/recipe-list.css">
+
+        <div class="image-grid">
+        {% for recipe in site.data.recipes %}
+            {% if recipe.rating != 0 %}
+            <a class="image-container" href="/recipes/{{ recipe.name | downcase | replace: " ", "-" | remove: "(" | remove: ")" | remove: "'" | remove: "&" }}.html">
+                <img class="photo-large" src="{{ recipe.image_url | default: "" }}">
+                <div class="bottom-left"><b><h3 class="text-hover">{{ recipe.name }}</h3></b></div>
+            </a>
+    		{% endif %}
         {% endfor %}
-        </ul>
-    </div>
-</div>
+        </div>
