--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -9,7 +9,7 @@ layout: page
 
         <div class="image-grid">
         {% for recipe in site.data.recipes %}
-            {% if recipe.rating != 0 %}
+            {% if recipe.rating != 0 and recipe.image_url %}
             <a class="image-container" href="/recipes/{{ recipe.name | downcase | replace: " ", "-" | remove: "(" | remove: ")" | remove: "'" | remove: "&" }}.html">
                 <img class="photo-large" src="{{ recipe.image_url | default: "" }}">
                 <div class="bottom-left"><b><h3 class="text-hover">{{ recipe.name }}</h3></b></div>
