--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -8,12 +8,14 @@ layout: page
 		<link rel="stylesheet" media="screen" href="{{ site.baseurl }}/css/recipe-list.css">
 
         <div class="image-grid">
-        {% for recipe in site.data.recipes %}
-            {% if recipe.rating != 0 and recipe.image_url %}
+        {% for i in (1..5) reversed %}
+            {% for recipe in site.data.recipes %}
+                {% if recipe.rating == i and recipe.image_url %}
             <a class="image-container" href="/recipes/{{ recipe.name | downcase | replace: " ", "-" | remove: "(" | remove: ")" | remove: "'" | remove: "&" }}.html">
                 <img class="photo-large" src="{{ recipe.image_url | default: "" }}">
                 <div class="bottom-left"><b><h3 class="text-hover">{{ recipe.name }}</h3></b></div>
             </a>
-    		{% endif %}
+    		    {% endif %}
+            {% endfor %}
         {% endfor %}
         </div>
