update jobs and remove the resume left column

--- a/_includes/resume/block.html
+++ b/_includes/resume/block.html
@@ -2,15 +2,15 @@
     <div class="block">
         <div class="main-row">
             <div class="org">
-                {{ section.org }}
+                <b>{{ section.org }}</b>
             </div>
             <div class="when">
-                {{ section.when }}
+                <b>{{ section.when }}</b>
             </div>
         </div>
         <div class="sub-row">
             <div class="role">
-                {{ section.role }}
+                <i>{{ section.role }}</i>
             </div>
             <div class="location">
                 {{ section.location }}
