--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -11,7 +11,7 @@ layout: page
         {% for i in (3..5) reversed %}
             {% for recipe in site.data.recipes %}
                 {% if recipe.rating == i and recipe.image_url %}
-            <a class="image-container" href="/recipes/{{ recipe.name | downcase | replace: " ", "-" | remove: "(" | remove: ")" | remove: "'" | remove: "&" }}.html">
+            <a class="image-container" href="/recipes/{{ recipe.name | downcase | replace: " ", "-" | remove: "(" | remove: ")" | remove: "'" | remove: "&" | remove: ","  }}.html">
                 <img class="photo-large" src="{{ recipe.image_url | default: "" }}">
                 <div class="bottom-left"><b><h3 class="text-hover">{{ recipe.name }}</h3></b></div>
             </a>
