--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -8,7 +8,7 @@ layout: page
 
 <article class="post">
 	<div class="image">
-		<img class="photo" src="{{ page.image_url }}" alt="{{ page.title }}">
+		<img class="photo" src="../{{ page.image_url }}" alt="{{ page.title }}">
 		<a href="https://www.yummly.com" class="YUMMLY-YUM-BUTTON">Yum</a>
 	</div>
 
